src/objects/Originator_Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Originator Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Originator Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Originator Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_Check</fullName>
        <active>true</active>
        <errorConditionFormula>OR(

NOT(CONTAINS(&quot;0123456789&quot;, LEFT(Account_Number__c , 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Account_Number__c , 2, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Account_Number__c , 3, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Account_Number__c , 4, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Account_Number__c , 5, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Account_Number__c , 6, 1))),

NOT(CONTAINS(&quot;0123456789&quot;, MID( Account_Number__c , 7, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Account_Number__c , 8, 1)))

)</errorConditionFormula>
        <errorDisplayField>Account_Number__c</errorDisplayField>
        <errorMessage>Account Number should only contain numeric characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sort_Code_Check</fullName>
        <active>true</active>
        <errorConditionFormula>OR(

NOT(CONTAINS(&quot;0123456789&quot;, LEFT( Sort_Code__c , 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Sort_Code__c , 2, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Sort_Code__c , 3, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Sort_Code__c, 4, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Sort_Code__c, 5, 1))),
NOT(CONTAINS(&quot;0123456789&quot;, MID( Sort_Code__c , 6, 1)))
)</errorConditionFormula>
        <errorDisplayField>Sort_Code__c</errorDisplayField>
        <errorMessage>Sort Code should only contain numeric characters</errorMessage>
    </validationRules>
</CustomObject>